--- a/package.json
+++ b/package.json
@@ -3,8 +3,9 @@
   "name": "proyecto",
   "description": "",
   "version": "1.0.0",
-  "main": "fileSystem.js",
+  "main": "src/index.js",
   "scripts": {
+    "start": "node .",
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "nodemon src/index.js"
   },
@@ -14,6 +15,7 @@
   "dependencies": {
     "express": "^4.18.2",
     "express-handlebars": "^7.1.2",
+    "mongoose": "^7.6.1",
     "nanoid": "^4.0.2"
   },
   "devDependencies": {
