--- a/package.json
+++ b/package.json
@@ -18,10 +18,15 @@
     "cookie-parser": "^1.4.6",
     "express": "^4.18.2",
     "express-handlebars": "^7.1.2",
+    "express-joi-validation": "^5.0.1",
     "express-session": "^1.17.3",
+    "joi": "^17.11.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^7.6.1",
-    "nanoid": "^4.0.2"
+    "nanoid": "^4.0.2",
+    "passport": "^0.6.0",
+    "passport-local": "^1.0.0",
+    "zod": "^3.22.4"
   },
   "devDependencies": {
     "nodemon": "^3.0.1"
