--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "license": "ISC",
   "dependencies": {
     "bcryptjs": "^2.4.3",
+    "connect-flash": "^0.1.1",
     "connect-mongo": "^5.1.0",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
@@ -23,6 +24,7 @@
     "express-session": "^1.17.3",
     "joi": "^17.11.0",
     "jsonwebtoken": "^9.0.2",
+    "method-override": "^3.0.0",
     "mongoose": "^7.6.1",
     "morgan": "^1.10.0",
     "nanoid": "^4.0.2",
@@ -32,6 +34,7 @@
     "zod": "^3.22.4"
   },
   "devDependencies": {
+    "handlebars": "^4.5.0",
     "nodemon": "^3.0.1"
   }
 }
