--- a/package.json
+++ b/package.json
@@ -1,40 +1,32 @@
 {
-  "type": "module",
-  "name": "proyecto",
-  "description": "",
+  "name": "coderhouse-backend",
   "version": "1.0.0",
-  "main": "src/index.js",
+  "description": "",
+  "main": "src/main.js",
+  "type": "module",
   "scripts": {
-    "start": "node .",
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "nodemon src/index.js"
+    "start": "node src/main.js",
+    "dev": "nodemon src/main.js",
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "bcryptjs": "^2.4.3",
-    "connect-flash": "^0.1.1",
-    "connect-mongo": "^5.1.0",
-    "cookie-parser": "^1.4.6",
-    "cors": "^2.8.5",
+    "bcrypt": "^5.1.0",
+    "connect-mongo": "^4.6.0",
+    "dotenv": "^16.4.1",
     "express": "^4.18.2",
-    "express-handlebars": "^7.1.2",
-    "express-joi-validation": "^5.0.1",
     "express-session": "^1.17.3",
-    "joi": "^17.11.0",
-    "jsonwebtoken": "^9.0.2",
-    "method-override": "^3.0.0",
-    "mongoose": "^7.6.1",
-    "morgan": "^1.10.0",
-    "nanoid": "^4.0.2",
+    "jsonwebtoken": "^9.0.0",
+    "mongodb": "4.13",
+    "mongoose": "^6.8.3",
+    "multer": "^1.4.5-lts.1",
+    "nodemailer": "^6.9.0",
     "passport": "^0.6.0",
     "passport-jwt": "^4.0.1",
     "passport-local": "^1.0.0",
-    "zod": "^3.22.4"
-  },
-  "devDependencies": {
-    "handlebars": "^4.5.0",
-    "nodemon": "^3.0.1"
+    "socket.io": "^4.5.4",
+    "winston": "^3.8.2"
   }
 }
