--- a/package.json
+++ b/package.json
@@ -27,11 +27,11 @@
     "jsonwebtoken": "^8.5.1",
     "mongoose": "6.7.0",
     "multer": "^1.4.5-lts.1",
-    "nodemailer": "6.8.0",
+    "nodemailer": "^6.8.0",
     "passport": "^0.5.3",
     "passport-local": "1.0.0",
     "socket.io": "^4.5.4",
-    "twilio": "3.83.1",
+    "twilio": "^3.83.1",
     "winston": "3.8.2"
   },
   "devDependencies": {
